# sam-python

./: .gitignore  README.md  build_executable.py  pyinstaller_entry.py  pyproject.toml  sam-python.spec
sam/: __init__.py  __main__.py  engine.py
sam_port/samtts_native/: NOTICE.md
sam_python/: cli.py
sam_python/samtts_native/: __init__.py
