[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-port"
version = "0.1.0"
description = "Python wrapper around the SAM JavaScript synthesizer"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
sam-python = "sam_port.cli:main"
