[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-python"
version = "0.1.0"
description = "Native Python port of the SAM text-to-speech synthesizer"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
sam-python = "sam_python.cli:main"
